# percolation-hypotheses-gen

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Frontend/: index.html  main.js  style.css
app/: app.py
chroma_data_store/: chroma.sqlite3
docs/: architecture.md  project_plan.md
src/: main.py  server.py
src/Hypothesis_Analysis/: complexity_score.py  entity_labels.py  information_density.py  information_density_.py
src/agents/: agent.py  sub_agents.py
src/config/: __init__.py  config.py
src/literature_processing/: process_literature.py
src/literature_processing/chroma_db_data/: chroma.sqlite3
src/models/: model.py
